--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>localization_node</name>
+  <name>localization</name>
   <version>0.0.0</version>
-  <description>The localization_node package</description>
+  <description>The localization package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -49,15 +49,15 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>aruco</build_depend>
+  <build_depend>fiducials_msgs</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
-  <build_export_depend>aruco</build_export_depend>
+  <build_export_depend>fiducials_msgs</build_export_depend>
   <build_export_depend>tf</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
-  <exec_depend>aruco</exec_depend>
+  <exec_depend>fiducials_msgs</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>tf</exec_depend>
