--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ add_message_files(
 
 add_service_files(
   FILES
-  corrrection_service.srv
+  correction_service.srv
 )
 
 generate_messages(
@@ -48,10 +48,9 @@ catkin_install_python(PROGRAMS scripts/correction_service.py
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-# include
+  # include
   ${catkin_INCLUDE_DIRS}
 )
-
 
 add_executable(${PROJECT_NAME} src/cam_trans.cpp)
 add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
